Layout issues fixed

--- a/amore/matching/static/matching/main.css
+++ b/amore/matching/static/matching/main.css
@@ -1,10 +1,7 @@
 body {
-    background-image:url('heart.gif');
-    background-size:100%;
-    background-repeat: repeat-y;
-    background-attachment: fixed;
-    height:100%;
-    width:100%;
+  background: #ffc0cb;
+  color: #333333;
+  margin-top: 5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -32,12 +29,30 @@ ul {
 }
 
 .content-section {
-  background: #ffffff;
+  background: url('https://media.giphy.com/media/26ufcYAkp8e66vanu/giphy.gif');
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
   margin-bottom: 20px;
 }
+
+.conquest {
+  background-color: #8b008b;
+  padding: 10px 20px;
+  border: 1px solid #dddddd;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
+
+.conquest-title {
+  color: #ffffff;
+}
+
+.conquest-title:hover {
+  color: ##f4bbff;
+  text-decoration: none;
+}
+
 
 .article-title {
   color: #444444;
@@ -70,6 +85,7 @@ a.article-title:hover {
 }
 
 .article-svg {
+  background-color: #ffc0cb;
   width: 25px;
   height: 25px;
   vertical-align: middle;
